; ModuleID = '/home/carl/AnghaBench/citus/src/backend/distributed/deparser/extr_objectaddress.c_AlterTableStmtObjectAddress.c'
source_filename = "/home/carl/AnghaBench/citus/src/backend/distributed/deparser/extr_objectaddress.c_AlterTableStmtObjectAddress.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@ERROR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [54 x i8] c"unsupported alter statement to get object address for\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (%struct.TYPE_4__*, i32)* @AlterTableStmtObjectAddress to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @AlterTableStmtObjectAddress(%struct.TYPE_4__* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca %struct.TYPE_4__*, align 8
  %5 = alloca i32, align 4
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %7 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  switch i32 %8, label %13 [
    i32 128, label %9
  ]

9:                                                ; preds = %2
  %10 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %11 = load i32, i32* %5, align 4
  %12 = call i32* @AlterTypeStmtObjectAddress(%struct.TYPE_4__* %10, i32 %11)
  store i32* %12, i32** %3, align 8
  br label %17

13:                                               ; preds = %2
  %14 = load i32, i32* @ERROR, align 4
  %15 = call i32 @errmsg(i8* getelementptr inbounds ([54 x i8], [54 x i8]* @.str, i64 0, i64 0))
  %16 = call i32 @ereport(i32 %14, i32 %15)
  br label %17

17:                                               ; preds = %9, %13
  %18 = load i32*, i32** %3, align 8
  ret i32* %18
}

declare dso_local i32* @AlterTypeStmtObjectAddress(%struct.TYPE_4__*, i32) #1

declare dso_local i32 @ereport(i32, i32) #1

declare dso_local i32 @errmsg(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
